--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@
   margin: 0;
   padding: 0;
 }
+
+#top-banner {
+  color: white;
+  font-size: 30px;
+  background-color: midnightblue;
+  text-align: center;
+}
